--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -11,6 +11,9 @@
 .text-pirmary {
   color: #FD6E0A;
 }
+.dark-2 {
+  color: rgba(71, 71, 71, 1);
+}
 /* Nav styles */
 nav{
   display: flex;
@@ -18,4 +21,15 @@ nav{
 .nav-title {
   font-weight: 800;
   font-size: 45px;
+}
+nav ul {
+  display: flex;
+}
+nav ul li {
+  list-style: none;
+  margin-right: 50px;
+}
+nav li a {
+  text-decoration: none;
+  font-size: 20px;
 }
