--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,9 +14,34 @@
 .dark-2 {
   color: rgba(71, 71, 71, 1);
 }
+.dark-3 {
+  color: rgba(117, 117, 117, 1);
+}
+
+.btn-primary {
+  background-color: #FD6E0A;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+  border: none;
+  padding: 18px 35px;
+  border-radius: 5px;
+}
+
+/* header styles */
+.header {
+  background-image: url(../assets/images/developer.png), url(../assets/images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+  background-color: #FFF8F3;
+}
+
 /* Nav styles */
 nav{
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 50px 200px;
 }
 .nav-title {
   font-weight: 800;
@@ -24,6 +49,7 @@ nav{
 }
 nav ul {
   display: flex;
+  align-items: center;
 }
 nav ul li {
   list-style: none;
@@ -32,4 +58,29 @@ nav ul li {
 nav li a {
   text-decoration: none;
   font-size: 20px;
+}
+
+/* banner styles */
+.banner {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 35px 0 200px;
+}
+.banner-content {
+  width: 585px;
+}
+.banner-greetings {
+  font-size: 45px;
+  font-weight: 600;
+}
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+}
+.banner_description {
+  font-size: 18px;
+  font-weight: 400;
+}
+.banner-profile-pic {
+  width: 580px;
 }
